# RedG

./: .gitignore  AYG_SPEC.md  CLAUDE.md  LICENSE  README.md
pipeline/: package-lock.json  package.json
pipeline/src/: config.ts  index.ts  ipc.ts  runner.ts  types.ts
pipeline/src/steps/: imageGenerator.ts  scriptGenerator.ts  ttsGenerator.ts  uploader.ts  videoComposer.ts
tui/: Cargo.toml
tui/src/: app.rs  config.rs  ipc.rs  main.rs
tui/src/ui/: dashboard.rs  image_config.rs  log_panel.rs  mod.rs  new_job_form.rs  onboarding.rs  script_review.rs
