[package]
name = "ayg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ayg"
path = "src/main.rs"

[dependencies]
ratatui       = "0.29"
crossterm     = "0.28"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
tokio-util    = "0.7"
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
